🛠 build logo pages

--- a/data/logos/dog-profile.yml
+++ b/data/logos/dog-profile.yml
@@ -13,6 +13,7 @@ variants:
   -
     title: One color dark background
     imgSrc: dog-profile/dog-profile-one-color-dark-bg.png
+    isDark: true
 
 customColors:
   -
