--- a/data/logos/bird-of-prey.yml
+++ b/data/logos/bird-of-prey.yml
@@ -4,7 +4,8 @@ description: Descending from the heavens, it's a hawk or falcon or eagle!
 
 tags: [ animal, one-color, thick-lines ]
 
-logoImgSrc: bird-of-prey/bird-of-prey.png
+mainAsset:
+  imgSrc: bird-of-prey/bird-of-prey.png
 
 variants:
   -
