--- a/data/logos/fox-runner.yml
+++ b/data/logos/fox-runner.yml
@@ -2,7 +2,7 @@ slug: fox-runner
 title: Fox runner
 description: Off to catch some goodies, this fox packs a whimsical smile and a big fluffy tail.
 
-tags: [ animal, multi-color ]
+tags: [ animal, multi-color, cute ]
 
 mainAsset:
   imgSrc: fox-runner/fox-runner.png
