--- a/data/logos/glance-girl.yml
+++ b/data/logos/glance-girl.yml
@@ -2,7 +2,7 @@ slug: glance-girl
 title: Glance girl
 description: Who's that peaking underneath her lashes? This gal has got her eye on you.
 
-tags: [ female, circle, multi-color ]
+tags: [ female, circle, multi-color, human ]
 
 mainAsset:
   imgSrc: glance-girl/glance-girl.png
