--- a/data/logos/shade-and-shades.yml
+++ b/data/logos/shade-and-shades.yml
@@ -2,7 +2,7 @@ slug: shade-and-shades
 title: Shade & shades
 description: Hat, sunglasses, and all day to chill.
 
-tags: [ thick-lines ]
+tags: [ thick-lines, human ]
 
 mainAsset:
   imgSrc: shade-and-shades/shade-and-shades.png
