--- a/data/logos/aok.yml
+++ b/data/logos/aok.yml
@@ -7,6 +7,10 @@ tags: [ hand, one-color ]
 mainAsset:
   imgSrc: aok/aok.png
 
+sprite: 2
+spriteRow: 4
+spriteCol: 3
+
 customColors:
   -
     title: Fill
