--- a/data/logos/brain-melt.yml
+++ b/data/logos/brain-melt.yml
@@ -7,6 +7,10 @@ tags: [ object, cute ]
 mainAsset:
   imgSrc: brain-melt/brain-melt.png
 
+sprite: 2
+spriteRow: 3
+spriteCol: 4
+
 customColors:
   -
     title: Fill 1
