--- a/data/logos/cat-walk.yml
+++ b/data/logos/cat-walk.yml
@@ -7,6 +7,10 @@ tags: [ animal, cat, one-color ]
 mainAsset:
   imgSrc: cat-walk/cat-walk.png
 
+sprite: 2
+spriteRow: 1
+spriteCol: 3
+
 customColors:
   -
     title: Fill
