--- a/data/logos/diamond-snake.yml
+++ b/data/logos/diamond-snake.yml
@@ -7,6 +7,10 @@ tags: [ animal, multi-color ]
 mainAsset:
   imgSrc: diamond-snake/diamond-snake.png
 
+sprite: 2
+spriteRow: 2
+spriteCol: 0
+
 customColors:
   -
     title: Color 1
