--- a/data/logos/mr-grin.yml
+++ b/data/logos/mr-grin.yml
@@ -7,6 +7,10 @@ tags: [ circle, one-color ]
 mainAsset:
   imgSrc: mr-grin/mr-grin.png
 
+sprite: 2
+spriteRow: 3
+spriteCol: 1
+
 customColors:
   -
     title: Fill
