--- a/data/logos/short-sword.yml
+++ b/data/logos/short-sword.yml
@@ -7,6 +7,10 @@ tags: [ object, gradient ]
 mainAsset:
   imgSrc: short-sword/short-sword-full-color.png
 
+sprite: 2
+spriteRow: 0
+spriteCol: 1
+
 variants:
   -
     title: Two color
