--- a/data/logos/space-marine-cat.yml
+++ b/data/logos/space-marine-cat.yml
@@ -7,6 +7,10 @@ tags: [ animal, cat ]
 mainAsset:
   imgSrc: space-marine-cat/space-marine-cat.png
 
+sprite: 2
+spriteRow: 3
+spriteCol: 2
+
 variants:
   -
     title: One color light background
