--- a/data/logos/standing-horse.yml
+++ b/data/logos/standing-horse.yml
@@ -7,6 +7,10 @@ tags: [ animal, one-color, thick-lines ]
 mainAsset:
   imgSrc: standing-horse/standing-horse.png
 
+sprite: 2
+spriteRow: 3
+spriteCol: 0
+
 customColors:
   -
     title: Fill
