--- a/data/logos/star-tree.yml
+++ b/data/logos/star-tree.yml
@@ -7,6 +7,10 @@ tags: [ object, multi-color ]
 mainAsset:
   imgSrc: star-tree/star-tree.png
 
+sprite: 2
+spriteRow: 0
+spriteCol: 0
+
 customColors:
   -
     title: Treetop
