--- a/data/logos/stick-runner.yml
+++ b/data/logos/stick-runner.yml
@@ -7,6 +7,10 @@ tags: [ figure, human, one-color ]
 mainAsset:
   imgSrc: stick-runner/stick-runner.png
 
+sprite: 2
+spriteRow: 1
+spriteCol: 2
+
 customColors:
   -
     title: Fill
