--- a/data/logos/supply-belt.yml
+++ b/data/logos/supply-belt.yml
@@ -7,6 +7,10 @@ tags: [ object, multi-color ]
 mainAsset:
   imgSrc: supply-belt/supply-belt.png
 
+sprite: 2
+spriteRow: 1
+spriteCol: 4
+
 variants:
   -
     title: One color
