--- a/data/logos/t-rex.yml
+++ b/data/logos/t-rex.yml
@@ -7,6 +7,10 @@ tags: [ animal, dinosaur, cute, one-color ]
 mainAsset:
   imgSrc: t-rex/t-rex.png
 
+sprite: 2
+spriteRow: 1
+spriteCol: 1
+
 customColors:
   -
     title: Fill
