--- a/data/logos/toucan-plaid.yml
+++ b/data/logos/toucan-plaid.yml
@@ -7,6 +7,10 @@ tags: [ animal, bird, multi-color ]
 mainAsset:
   imgSrc: toucan-plaid/toucan-plaid.png
 
+sprite: 2
+spriteRow: 4
+spriteCol: 1
+
 variants:
   -
     title: Black bill
