--- a/data/logos/truck-flight.yml
+++ b/data/logos/truck-flight.yml
@@ -7,6 +7,10 @@ tags: [ object, one-color ]
 mainAsset:
   imgSrc: truck-flight/truck-flight.png
 
+sprite: 2
+spriteRow: 4
+spriteCol: 2
+
 customColors:
   -
     title: Outline
