--- a/data/logos/construction-gorilla.yml
+++ b/data/logos/construction-gorilla.yml
@@ -2,6 +2,7 @@ slug: construction-gorilla
 title: Construction gorilla
 description: Kitchen need remodeling? I know a great guy. His entire body fits in a square block, and he's great with marble countertops.
 
+isSold: true
 tags: [ animal, thick-lines, multi-color ]
 
 mainAsset:
