--- a/data/logos/trefoil.yml
+++ b/data/logos/trefoil.yml
@@ -2,6 +2,8 @@ slug: trefoil
 title: Trefoil
 description: A band loops over itself thrice like a Penrose triangle.
 
+isSold: true
+
 tags: [ abstract, one-color ]
 
 mainAsset:
