--- a/data/logos/brain-melt.yml
+++ b/data/logos/brain-melt.yml
@@ -2,7 +2,7 @@ slug: brain-melt
 title: Brain melt
 description: Whoa. You're telling me astronauts don't even eat astronaut ice cream?
 
-tags: [ object, cute ]
+tags: [ object, head, cute ]
 
 mainAsset:
   imgSrc: brain-melt/brain-melt.png
