--- a/data/logos/diamond-snake.yml
+++ b/data/logos/diamond-snake.yml
@@ -2,7 +2,7 @@ slug: diamond-snake
 title: Diamond snake
 description: Hiding the grass amoungst the rubies and emeralds lies the opulent diamond snake. 
 
-tags: [ animal, multi-color ]
+tags: [ animal, body, multi-color ]
 
 mainAsset:
   imgSrc: diamond-snake/diamond-snake.png
