--- a/data/logos/horse-mane.yml
+++ b/data/logos/horse-mane.yml
@@ -2,7 +2,7 @@ slug: horse-mane
 title: Horse mane
 description: Bold, tough work horse with hair to match.
 
-tags: [ animal, thick-lines, one-color ]
+tags: [ animal, head, thick-lines, one-color ]
 
 mainAsset:
   imgSrc: horse-mane/horse-mane.png
