--- a/data/logos/interlocking-hands.yml
+++ b/data/logos/interlocking-hands.yml
@@ -1,7 +1,7 @@
 slug: interlocking-hands
 title: Interlocking hands
 
-tags: [ human, thick-lines ]
+tags: [ hand, thick-lines, multi-color ]
 
 mainAsset:
   imgSrc: interlocking-hands/interlocking-hands.png
