--- a/data/logos/lil-robo.yml
+++ b/data/logos/lil-robo.yml
@@ -2,7 +2,7 @@ slug: lil-robo
 title: Lil robo
 description: Kaiju attacking downtown Spokane! Quick, time to form Lil Robo!
 
-tags: [ object, figure, cute, one-color ]
+tags: [ object, body, cute, one-color ]
 
 mainAsset:
   imgSrc: lil-robo/lil-robo.png
