--- a/data/logos/oak-leaf.yml
+++ b/data/logos/oak-leaf.yml
@@ -2,7 +2,7 @@ slug: oak-leaf
 title: Oak leaf
 description: Geometric, abstract interpretation of an oak leaf. The circle matches the cut-out shapes of the leaf half.
 
-tags: [ object, one-color ]
+tags: [ object, abstract, one-color ]
 
 mainAsset:
   imgSrc: oak-leaf/oak-leaf.png
