--- a/data/logos/phone-hand.yml
+++ b/data/logos/phone-hand.yml
@@ -2,7 +2,7 @@ slug: phone-hand
 title: Phone hand
 description: A window to the whole wide world lies in the palm of your hand.
 
-tags: [ object, hand ]
+tags: [ object, hand, multi-color ]
 
 mainAsset:
   imgSrc: phone-hand/phone-hand.png
