--- a/data/logos/pug-icon.yml
+++ b/data/logos/pug-icon.yml
@@ -2,7 +2,7 @@ slug: pug-icon
 title: Pug icon
 description: Can't stay mad at this trouble-maker.
 
-tags: [ animal, canine, dog, one-color, multi-color ]
+tags: [ animal, canine, dog, head, one-color ]
 
 mainAsset:
   imgSrc: pug-icon/pug-icon.png
