--- a/data/logos/red-panda.yml
+++ b/data/logos/red-panda.yml
@@ -2,7 +2,7 @@ slug: red-panda
 title: Red panda
 description: If racoons were this cute, USA would have serious trash monster issues.
 
-tags: [ animal, cute, one-color ]
+tags: [ animal, body, cute, one-color ]
 
 mainAsset:
   imgSrc: red-panda/red-panda.png
