--- a/data/logos/sauropod.yml
+++ b/data/logos/sauropod.yml
@@ -2,7 +2,7 @@ slug: sauropod
 title: Sauropod
 description: Fossil records show mighty long-necked beasts would roam the plains, just chillin'.
 
-tags: [ animal, dinosaur, one-color ]
+tags: [ animal, body, dinosaur, one-color ]
 
 mainAsset:
   imgSrc: sauropod/sauropod.png
