--- a/data/logos/wild-eyed-tiger.yml
+++ b/data/logos/wild-eyed-tiger.yml
@@ -2,7 +2,7 @@ slug: wild-eyed-tiger
 title: Wild eyed tiger
 description: Some would say fierce, but I'd say this kitty is motivated. Go get 'em tiger!
 
-tags: [ animal, cat, multi-color ]
+tags: [ animal, head, cat, multi-color ]
 
 mainAsset:
   imgSrc: wild-eyed-tiger/wild-eyed-tiger.png
