--- a/data/logos/witchie.yml
+++ b/data/logos/witchie.yml
@@ -2,7 +2,7 @@ slug: witchie
 title: Witchie
 description: More of the Kiki's Delivery Service over the Wicked variety.
 
-tags: [ human, flying ]
+tags: [ human, body, flying ]
 
 mainAsset:
   imgSrc: witchie/witchie.png
