--- a/data/logos/adventure.yml
+++ b/data/logos/adventure.yml
@@ -2,7 +2,7 @@ slug: adventure
 title: Adventure
 description: Go where the fun takes you.
 
-tags: [ circle, multi-color ]
+tags: [ circle, scene, multi-color ]
 
 sprite: 1
 spriteRow: 1
