--- a/data/logos/bunny-flop.yml
+++ b/data/logos/bunny-flop.yml
@@ -2,7 +2,7 @@ slug: bunny-flop
 title: Bunny flop
 description: Wink of the eye, twitch of the ears.
 
-tags: [ animal, cute ]
+tags: [ animal, head, multi-color, cute ]
 
 mainAsset:
   imgSrc: bunny-flop/bunny-flop.png
