--- a/data/logos/construction-gorilla.yml
+++ b/data/logos/construction-gorilla.yml
@@ -3,7 +3,7 @@ title: Construction gorilla
 description: Kitchen need remodeling? I know a great guy. His entire body fits in a square block, and he's great with marble countertops.
 
 isSold: true
-tags: [ animal, thick-lines, multi-color ]
+tags: [ animal, body, thick-lines, multi-color ]
 
 mainAsset:
   imgSrc: construction-gorilla/construction-gorilla.png
