--- a/data/logos/happy-cat.yml
+++ b/data/logos/happy-cat.yml
@@ -2,7 +2,7 @@ slug: happy-cat
 title: Happy cat
 description: Nothing warms the heart like a smiling feline. This logo has some versatility, working both with only facial features, or as an iconic shape.
 
-tags: [ animal, cat, cute ]
+tags: [ animal, head, cat, cute ]
 
 sprite: 1
 spriteRow: 0
