--- a/data/logos/seal-play.yml
+++ b/data/logos/seal-play.yml
@@ -2,7 +2,7 @@ slug: seal-play
 title: Seal play
 description: Angled lines are 2x3, which makes for a more cohesive emblem.
 
-tags: [ animal, one-color ]
+tags: [ animal, body, one-color ]
 
 mainAsset:
   imgSrc: seal-play/seal-play.png
