--- a/data/logos/tall-elephant.yml
+++ b/data/logos/tall-elephant.yml
@@ -2,7 +2,7 @@ slug: tall-elephant
 title: Tall elephant
 description: This logo uses transparency and multiply blend mode to overlay shapes.
 
-tags: [ animal, multi-color ]
+tags: [ animal, body, multi-color ]
 
 mainAsset:
   imgSrc: tall-elephant/tall-elephant.png
