--- a/data/logos/aok.yml
+++ b/data/logos/aok.yml
@@ -3,6 +3,7 @@ title: A-OK
 description: That's a spicy meat-a ball.
 
 tags: [ hand, one-color ]
+otherTag: hand
 
 mainAsset:
   imgSrc: aok/aok.png
