--- a/data/logos/brain-melt.yml
+++ b/data/logos/brain-melt.yml
@@ -3,6 +3,7 @@ title: Brain melt
 description: Whoa. You're telling me astronauts don't even eat astronaut ice cream?
 
 tags: [ object, head, cute ]
+otherTag: head
 
 mainAsset:
   imgSrc: brain-melt/brain-melt.png
