--- a/data/logos/cat-walk.yml
+++ b/data/logos/cat-walk.yml
@@ -3,6 +3,7 @@ title: Cat walk
 description: This kitty is on the prowl. Its pointy paws give it just a bit of edge to make you look twice.
 
 tags: [ animal, cat, body, one-color ]
+otherTag: cat
 
 mainAsset:
   imgSrc: cat-walk/cat-walk.png
