--- a/data/logos/fox-runner.yml
+++ b/data/logos/fox-runner.yml
@@ -2,7 +2,8 @@ slug: fox-runner
 title: Fox runner
 description: Off to catch some goodies, this fox packs a whimsical smile and a big fluffy tail.
 
-tags: [ animal, body, multi-color, cute, running ]
+tags: [ animal, body, multi-color, cute, running, canine, moving ]
+otherTag: moving
 
 mainAsset:
   imgSrc: fox-runner/fox-runner.png
