--- a/data/logos/funnel.yml
+++ b/data/logos/funnel.yml
@@ -3,6 +3,7 @@ title: Funnel
 description: Two spheres project from a cone of concentric rings.
 
 tags: [ abstract, one-color ]
+otherTag: abstract
 
 mainAsset:
   imgSrc: funnel/funnel.png
