--- a/data/logos/glance-girl.yml
+++ b/data/logos/glance-girl.yml
@@ -3,6 +3,7 @@ title: Glance girl
 description: Who's that peaking underneath her lashes? This gal has got her eye on you.
 
 tags: [ female, circle, head, multi-color, human ]
+otherTag: female
 
 mainAsset:
   imgSrc: glance-girl/glance-girl.png
