--- a/data/logos/hand-plane.yml
+++ b/data/logos/hand-plane.yml
@@ -3,6 +3,7 @@ title: Hand plane
 description: "Attention passengers: we are preparing for take-off."
 
 tags: [ hand, object, multi-color ]
+otherTag: hand
 
 mainAsset:
   imgSrc: hand-plane/hand-plane.png
