--- a/data/logos/happy-cat.yml
+++ b/data/logos/happy-cat.yml
@@ -3,6 +3,7 @@ title: Happy cat
 description: Nothing warms the heart like a smiling feline. This logo has some versatility, working both with only facial features, or as an iconic shape.
 
 tags: [ animal, head, cat, cute ]
+otherTag: cat
 
 sprite: 1
 spriteRow: 0
