--- a/data/logos/interlocking-hands.yml
+++ b/data/logos/interlocking-hands.yml
@@ -2,6 +2,7 @@ slug: interlocking-hands
 title: Interlocking hands
 
 tags: [ hand, thick-lines, multi-color ]
+otherTag: hand
 
 mainAsset:
   imgSrc: interlocking-hands/interlocking-hands.png
