--- a/data/logos/lady-phase-shift.yml
+++ b/data/logos/lady-phase-shift.yml
@@ -2,7 +2,8 @@ slug: lady-phase-shift
 title: Lazy phase shift
 description: A change in the phase of a waveform.
 
-tags: [ female, head, human, gradient ]
+tags: [ female, head, human, gradient, abstract ]
+otherTag: female
 
 mainAsset:
   imgSrc: lady-phase-shift/lady-phase-shift.png
