--- a/data/logos/red-panda.yml
+++ b/data/logos/red-panda.yml
@@ -3,6 +3,7 @@ title: Red panda
 description: If racoons were this cute, USA would have serious trash monster issues.
 
 tags: [ animal, body, cute, one-color ]
+otherTag: cute
 
 mainAsset:
   imgSrc: red-panda/red-panda.png
