--- a/data/logos/shade-and-shades.yml
+++ b/data/logos/shade-and-shades.yml
@@ -3,18 +3,25 @@ title: Shade & shades
 description: Hat, sunglasses, and all day to chill.
 
 tags: [ thick-lines, head, human ]
+otherTag: thick-lines
 
 mainAsset:
-  imgSrc: shade-and-shades/shade-and-shades.png
+  imgSrc: shade-and-shades/shade-and-shades-one-color.png
 
 sprite: 1
 spriteRow: 3
 spriteCol: 1
 
+customColors:
+  -
+    title: Fill
+    color: '#333'
+    imgSrc: shade-and-shades/shade-and-shades-one-color.png
+
 variants:
   -
-    title: One color
-    imgSrc: shade-and-shades/shade-and-shades-one-color.png
+    title: Gradient
+    imgSrc: shade-and-shades/shade-and-shades.png
   -
     title: Solid
     imgSrc: shade-and-shades/shade-and-shades-solid.png
