--- a/data/logos/space-marine-cat.yml
+++ b/data/logos/space-marine-cat.yml
@@ -2,7 +2,8 @@ slug: space-marine-cat
 title: Space Marine cat
 description: Star-blazer eye? Check. Planetary eye-patch? Check. Bad-ass attitude? Oh you know it. This logo is worthy of emblazing the vanguard Delta Force of Alpha Centari.
 
-tags: [ animal, head, cat, multi-color ]
+tags: [ animal, head, cat, multi-color, bad-ass ]
+otherTag: bad-ass
 
 mainAsset:
   imgSrc: space-marine-cat/space-marine-cat.png
