--- a/data/logos/supply-belt.yml
+++ b/data/logos/supply-belt.yml
@@ -3,6 +3,7 @@ title: Supply belt
 description: Pencil, scissors, paper clip. Yellow, red, blue. Let's get to work.
 
 tags: [ object, multi-color, thick-lines ]
+otherTag: object
 
 mainAsset:
   imgSrc: supply-belt/supply-belt.png
