--- a/data/logos/penguin.yml
+++ b/data/logos/penguin.yml
@@ -2,7 +2,8 @@ slug: penguin
 title: Penguin
 description: A minimal penguin. Or is it a black egg with white yolk? Or is it a hound going "AAAAAAAH?"
 
-tags: [ animal, body, bird ]
+tags: [ animal, body, bird, standing ]
+otherTag: standing
 
 mainAsset:
   imgSrc: penguin/penguin.png
