--- a/data/logos/phone-hand.yml
+++ b/data/logos/phone-hand.yml
@@ -3,6 +3,7 @@ title: Phone hand
 description: A window to the whole wide world lies in the palm of your hand.
 
 tags: [ object, hand, multi-color ]
+otherTag: hand
 
 mainAsset:
   imgSrc: phone-hand/phone-hand.png
