--- a/data/logos/standing-horse.yml
+++ b/data/logos/standing-horse.yml
@@ -2,7 +2,8 @@ slug: standing-horse
 title: Standing horse
 description: Whoa nelly! This pony is composed of interconnecting lines, but leaves gaps to keep things interesting.
 
-tags: [ animal, body, one-color, thick-lines ]
+tags: [ animal, body, one-color, thick-lines, standing ]
+otherTag: thick-lines
 
 mainAsset:
   imgSrc: standing-horse/standing-horse.png
