--- a/data/logos/star-flower.yml
+++ b/data/logos/star-flower.yml
@@ -2,7 +2,8 @@ slug: star-flower
 title: Star flower
 description: What do you see? A flower, a star, a human figure? Maybe it's a little of all three, set in a rainbow.
 
-tags: [ abstract, star, gradient, multi-color ]
+tags: [ abstract, star, gradient, multi-color, colorful ]
+otherTag: colorful
 
 mainAsset:
   imgSrc: star-flower/star-flower.png
