--- a/data/logos/star-tree.yml
+++ b/data/logos/star-tree.yml
@@ -2,7 +2,8 @@ slug: star-tree
 title: Star tree
 description: A fluffly cloud-like treetop growing out of a stout star-like trunk.
 
-tags: [ object, multi-color ]
+tags: [ object, scene, multi-color ]
+otherTag: object
 
 mainAsset:
   imgSrc: star-tree/star-tree.png
