--- a/data/logos/t-rex.yml
+++ b/data/logos/t-rex.yml
@@ -2,7 +2,8 @@ slug: t-rex
 title: T-rex
 description: What could strike fear into the heart of any dinosaur more than an adorable t-rex.
 
-tags: [ animal, body, dinosaur, cute, one-color ]
+tags: [ animal, body, dinosaur, cute, one-color, standing, bad-ass ]
+otherTag: bad-ass
 
 mainAsset:
   imgSrc: t-rex/t-rex.png
