--- a/data/logos/trefoil.yml
+++ b/data/logos/trefoil.yml
@@ -5,6 +5,7 @@ description: A band loops over itself thrice like a Penrose triangle.
 isSold: true
 
 tags: [ abstract, one-color ]
+otherTag: abstract
 
 mainAsset:
   imgSrc: trefoil/trefoil.png
