--- a/data/logos/bunny-flop.yml
+++ b/data/logos/bunny-flop.yml
@@ -1,6 +1,7 @@
 slug: bunny-flop
 title: Bunny flop
 description: Wink of the eye, twitch of the ears.
+isSold: true
 
 tags: [ animal, head, multi-color, cute ]
 otherTag: head
