--- a/data/logos/lady-phase-shift.yml
+++ b/data/logos/lady-phase-shift.yml
@@ -1,6 +1,7 @@
 slug: lady-phase-shift
 title: Lazy phase shift
 description: A change in the phase of a waveform.
+isSold: true
 
 tags: [ female, head, human, gradient, abstract ]
 otherTag: female
