--- a/data/logos/dog-profile.yml
+++ b/data/logos/dog-profile.yml
@@ -1,6 +1,7 @@
 slug: dog-profile
 title: Dog profile
 description: This stoic pup gazes proudly into the distance over your brand. The simple shapes and clean lines make for a rock-solid emblem that looks great at any size.
+isSold: true
 
 tags: [ animal, circle, canine, multi-color ]
 otherTag: canine
