--- a/data/logos/trefoil.yml
+++ b/data/logos/trefoil.yml
@@ -1,6 +1,7 @@
 slug: trefoil
 title: Trefoil
 description: A band loops over itself thrice like a Penrose triangle.
+isSold: true
 
 tags: [ abstract, one-color ]
 otherTag: abstract
